wordpress/overlays/prod/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-mysql
  namespace: wordpress
  labels:
    app: website-mysql
spec:
  template:
    spec:
      containers:
        - name: mysql
          volumeDevices:
          - devicePath: /var/lib/mysql
            name: mysql
