wordpress/overlays/prod/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-wp
  namespace: wordpress
  labels:
    app: website-wp
spec:
  selector:
    matchLabels:
      app: website-wp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: website-wp
    spec:
      containers:
      - image: wordpress:5.8-apache
        imagePullPolicy: IfNotPresent
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeDevices:
          - devicePath: /var/www/html
            name: wordpress-files
