wordpress/overlays/prod/ingress-patch.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: website
#   namespace: wordpress
#   labels:
#     app: website-wp
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
#     cert-manager.io/issuer: "letsencrypt-prod"
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
# spec:
#   tls:
#     - secretName: website-tls
#       hosts:
#         - wordpress.hoanghd.com
#   rules:
#     - host: wordpress.hoanghd.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: website-wp
#                 port:
#                   number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: wordpress
  labels:
    app: website-wp
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - wordpress.hoanghd.com
  rules:
  - host: wordpress.hoanghd.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-wp
            port:
              number: 80
