wordpress/overlays/prod/nginx-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: wordpress
  labels:
    app: website-wp
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - wordpress.hoanghd.com
    # secretName: website-tls
  rules:
  - host: wordpress.hoanghd.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-wp
            port:
              number: 80
